--- a/config_usuarios/docker-compose.yml
+++ b/config_usuarios/docker-compose.yml
@@ -3,6 +3,7 @@ services:
 #Service sa toma el Dockerfile de ./usuarios
  usuarios:
   build: ./usuarios
+  hostname: config_usuarios
   #Mapea el puerto 22 del container al 8022 del anfitrión
   ports:
   - "8022:22"
