--- a/config_openldap/cliente/Dockerfile
+++ b/config_openldap/cliente/Dockerfile
@@ -25,6 +25,16 @@ RUN set -x; \
 RUN set -x; \
 	apt update && apt install -y vim iputils-ping nano dialog tasksel
 
+#Instalamos paquetes de cliente openldap
+RUN set -x; \
+	apt install -y nscd libpam-ldap libnss-ldap ldap-utils
+
+#Copiamos archivos de conf openldap client
+COPY pam_ldap.conf /etc/pam_ldap.conf
+COPY pam_ldap.secret /etc/pam_ldap.secret
+COPY libnss-ldap.conf /etc/libnss-ldap.conf
+COPY libnss-ldap.secret /etc/libnss-ldap.secret
+
 #Limpiando
 RUN set -x; \
 	apt clean
