quitar privileged=true

--- a/config_openldap/docker-compose.yml
+++ b/config_openldap/docker-compose.yml
@@ -13,7 +13,8 @@ services:
  cliente:
   build: ./cliente
   hostname: cliente
-  privileged: true  
+  cap_add:
+  - ALL  
   ports:
   - "3389:3389"
   volumes:
